--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -101,6 +101,326 @@
   </div>
 </div> 
 -->
+<div class="card clearfix" data-score="12" data-price="35.16">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WqgUt0"><img src="https://images-na.ssl-images-amazon.com/images/I/81BATucARjL._SX679_.jpg" alt="SKLZ Accelerator Pro Indoor Putting" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>12% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WqgUt0">SKLZ Accelerator Pro Indoor Putting Green with Ball Return, 9 feet x 16.25 inches</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$35.16</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WqgUt0">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="19" data-price="48.46">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="https://images-na.ssl-images-amazon.com/images/I/91k9FJcuXsL._SX522_.jpg" alt="Remington HC4250 Shortcut Pro Self-Haircut Kit" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>19% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="product_link">Remington HC4250 Shortcut Pro Self-Haircut Kit, Beard Trimmer, Hair Clippers for Men (13 pieces) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$48.46</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="11.44">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="https://images-na.ssl-images-amazon.com/images/I/51RZkifR1QL.jpg" alt="Flambeau Outdoor 6383 Classic 3-Tray Tackle Box" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="product_link">Flambeau Outdoor 6383 Classic 3-Tray Tackle Box, Red/Gray</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.44</span><span class="ori_price">$24.60</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="57" data-price="18.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K6hA4U"><img src="https://m.media-amazon.com/images/I/81leZN8NLkL._AC_UL320_.jpg" alt="Lodge 10.5 Inch Square Cast Iron Grill Pan" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>57% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K6hA4U">Lodge 10.5 Inch Square Cast Iron Grill Pan. Pre-seasoned Grill Pan with Easy Grease Draining for Grilling Bacon, Steak, and Meats.</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$18.90</span><span class="ori_price">$44.30</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K6hA4U">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="18" data-price="269.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MDLS17"><img src="https://m.media-amazon.com/images/I/81L5SdM+cjL._AC_UL320_.jpg" alt="Cloud-like Mattress" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>18% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MDLS17">Zinus Memory Foam 12 Inch / Premium / Cloud-like Mattress, Queen</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$269.00</span><span class="ori_price">$330.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MDLS17">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="42" data-price="32.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Mzt3fp"><img src="https://images-na.ssl-images-amazon.com/images/I/71k5NfFp6ML._SX522_.jpg" alt="HUGGIES Snug & Dry Diapers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>42% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Mzt3fp">HUGGIES Snug & Dry Diapers, Size 4, 192Count (Packaging May Vary) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$32.99</span><span class="ori_price">$56.74</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Mzt3fp">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K6hM48"><img src="https://images-na.ssl-images-amazon.com/images/I/81aocDN6LhL._SX522_.jpg" alt="Neutrogena Sunscreen Lotion" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K6hM48">Neutrogena Ultra Sheer Dry-Touch Water Resistant and Non-Greasy Sunscreen Lotion with Broad Spectrum SPF 45, 3 fl. oz, Pack of 2 </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$14.99</span>
+        <div class="tooltip_orange">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount width coupon</p>
+          </div>
+        </div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K6hM48">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="11.97">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="https://images-na.ssl-images-amazon.com/images/I/81BiwXqtrQL._SX522_.jpg" alt="Tide Laundry Detergent Liquid" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="product_link">Tide Laundry Detergent Liquid, Original Scent, HE Turbo Clean, 100 oz, 64 Loads </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.97</span><span class="ori_price">$16.00</span>
+        <div class="tooltip_orange">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount width coupon</p>
+          </div>
+        </div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="55.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XHNdoN"><img src="https://images-na.ssl-images-amazon.com/images/I/91tejum7ARL._SX522_.jpg" alt="LEGO Marvel Super Heroes Avengers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XHNdoN">LEGO Marvel Super Heroes Avengers: Infinity War Thanos: Ultimate Battle 76107 Guardians of the Galaxy Starship Action Construction Toy</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$55.99</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XHNdoN">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="63.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wu0Dmx"><img src="https://images-na.ssl-images-amazon.com/images/I/81ekJnxc5xL._SX522_.jpg" alt="LEGO Marvel Avengers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wu0Dmx">LEGO Marvel Avengers: Avengers Ultimate Quinjet 76126 Building Kit (838 Piece)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$63.99</span><span class="ori_price">$79.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wu0Dmx">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="47.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IzpuAr"><img src="https://images-na.ssl-images-amazon.com/images/I/91jzj7Z4HlL._SX522_.jpg" alt="LEGO Marvel Avengers Iron Man" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IzpuAr">LEGO Marvel Avengers Iron Man Hall of Armor 76125 Building Kit (524 Piece)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$47.99</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IzpuAr">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2F0542F"><img src="https://m.media-amazon.com/images/I/7193lA5uaTL._AC_UL320_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2F0542F">Hamilton Beach Personal Single Serve Blender with Travel Lid, Blue</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$19.49</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2F0542F">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="59.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WpXdBB"><img src="https://m.media-amazon.com/images/I/71cQiuyyCpL._AC_UL436_.jpg" alt="DASH Compact Electric Air Fryer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WpXdBB">DASH Compact Electric Air Fryer + Oven Cooker with Digital Display, Temperature Control, Non Stick Fry Basket, Recipe Guide</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$59.49</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WpXdBB">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="9.08">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MC0WfL"><img src="https://m.media-amazon.com/images/I/81vATg8LqnL._AC_UL320_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MC0WfL">Pilot FriXion Clicker Retractable Erasable Gel Pens Fine Point (.7) Assorted Color Inks 7-pk; Make Mistakes Disappear</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.08</span><span class="ori_price">$20.73</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MC0WfL">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="69" data-price="9.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Iz6rGH"><img src="https://m.media-amazon.com/images/I/91sE6LdiXEL._AC_UL320_.jpg" alt="Ticonderoga Wood-Cased Graphite Pencils" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>69% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Iz6rGH">Ticonderoga Wood-Cased Graphite Pencils, #2 HB Soft, Yellow, 96 Count</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.95</span><span class="ori_price">$32.49</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Iz6rGH">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="7.92">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WtnLla"><img src="https://m.media-amazon.com/images/I/8102L6+E9FL._AC_UL320_.jpg" alt="Sharpie Permanent Markers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WtnLla">Sharpie Permanent Markers, Ultra Fine Point, Black, 12 Count</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$7.92</span><span class="ori_price">$16.44</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WtnLla">Shop Now at Amazon</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="34" data-price="9.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MC18vv"><img src="https://m.media-amazon.com/images/I/81QYiEl15SL._AC_UL320_.jpg" alt="Scotch Brand Double Sided Tape" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>34% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MC18vv">Scotch Brand Double Sided Tape, Narrow Width, Trusted Favorite, Engineered for Bonding, 1/2 x 500 Inches, 6 Dispensered Rolls (6137H-2PC-MP)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.98</span><span class="ori_price">$15.11</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MC18vv">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="40" data-price="discounted_price">
   <div class="image_box">
