--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -79,8 +79,8 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;font-size:13px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
-  .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;border:1px solid #616161;padding:10px 0;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;display:block;font-family: 'Montserrat', sans-serif;}
+  .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;border:3px solid #000;padding:10px 0;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:block;font-family: 'Montserrat', sans-serif;font-weight:bold;}
 }
 
 @media screen and (max-width:640px){
@@ -138,7 +138,7 @@
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange>.tooltip-content{visibility:hidden;width:400px;background:#e47911;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
-  .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(255,0,0,0.2);position:relative;}
+  .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
