--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -67,6 +67,12 @@
         </div>
         
         <div class="card_wrap sort-list">
+          <div class="amz_search">
+            <script type="text/javascript">amzn_assoc_placement = "adunit0";amzn_assoc_tracking_id = "3628-20";amzn_assoc_ad_mode = "search";amzn_assoc_ad_type = "smart";amzn_assoc_marketplace = "amazon";amzn_assoc_region = "US";amzn_assoc_default_search_phrase = "";amzn_assoc_default_category = "All";
+              amzn_assoc_linkid = "0080e330fc88b2ef23076ea8db0c186b";amzn_assoc_rows = "1";amzn_assoc_search_bar = "true";amzn_assoc_search_bar_position = "top";
+             </script>
+             <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+          </div>
           <%= render 'deals/body_bestdeals' %>
         </div>
         <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_04">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
