--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -79,6 +79,12 @@
         </div>
         
         <div class="card_wrap sort-list">
+          <div class="amz_search">
+            <script type="text/javascript">amzn_assoc_placement = "adunit0";amzn_assoc_tracking_id = "3628-20";amzn_assoc_ad_mode = "search";amzn_assoc_ad_type = "smart";amzn_assoc_marketplace = "amazon";amzn_assoc_region = "US";amzn_assoc_default_search_phrase = "";amzn_assoc_default_category = "All";
+              amzn_assoc_linkid = "0080e330fc88b2ef23076ea8db0c186b";amzn_assoc_rows = "1";amzn_assoc_search_bar = "true";amzn_assoc_search_bar_position = "top";
+             </script>
+             <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+          </div>
           <%= render 'deals/body_promocode' %>
         </div>
         <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_01">GO TO PROMO CODES OF YESTERDAY</a></h2>
