--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -73,6 +73,15 @@
              </script>
              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
           </div>
+          
+          <div class="fathers_day">
+            <a target="_blank" href="https://amzn.to/31jXEkr">
+             <strong>FATHER'S DAY GIFTS</strong>
+             <p>Find Gifts that'll make him smile for Happy Father's Day on Amazon.com<br />Shopping for gifts is made easy. All orders eligible for Free Shipping!</p>
+             <em>SHOP NOW</em>
+            </a>
+          </div>
+
           <%= render 'deals/body_bestdeals' %>
         </div>
         <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_04">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
