--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -85,6 +85,15 @@
              </script>
              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
           </div>
+
+          <div class="fathers_day">
+            <a target="_blank" href="https://amzn.to/31jXEkr">
+             <strong>FATHER'S DAY GIFTS</strong>
+             <p>Find Gifts that'll make him smile for Happy Father's Day on Amazon.com<br />Shopping for gifts is eligible for Free Shipping!</p>
+             <em>SHOP NOW</em>
+            </a>
+          </div>
+          
           <%= render 'deals/body_promocode' %>
         </div>
         <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_01">GO TO PROMO CODES OF YESTERDAY</a></h2>
