--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -86,13 +86,13 @@
              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
           </div>
 
-          <div class="fathers_day">
+<!--           <div class="fathers_day">
             <a target="_blank" href="https://amzn.to/31jXEkr">
              <strong>FATHER'S DAY GIFTS</strong>
              <p>Find Gifts that'll make him smile for Happy Father's Day on Amazon.com<br />Shopping for gifts is eligible for Free Shipping!</p>
              <em>SHOP NOW</em>
             </a>
-          </div>
+          </div> -->
           
           <%= render 'deals/body_promocode' %>
         </div>
