--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -74,6 +74,10 @@
              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
           </div>
           
+          <div class="fathers_day">
+            <a target="_blank" href="https://amzn.to/31jXEkr"><img src="<%= asset_path 'fathers-day.jpg' %>"></a>
+          </div>
+
           <!-- <div class="fathers_day">
             <a target="_blank" href="https://amzn.to/31jXEkr">
              <strong>FATHER'S DAY GIFTS</strong>
