--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -101,6 +101,25 @@
   </div>
 </div> 
 -->
+
+<div class="card clearfix" data-score="17" data-price="49.93">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MC8a3k"><img src="https://images-na.ssl-images-amazon.com/images/I/71slltpqOCL._SY879_.jpg" alt="Ninja BL456 Blenders" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>17% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MC8a3k">Ninja BL456 Blenders - Countertop, 24 oz, Silver/Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.93</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MC8a3k">Shop Now at Amazon</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="12" data-price="35.16">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2WqgUt0"><img src="https://images-na.ssl-images-amazon.com/images/I/81BATucARjL._SX679_.jpg" alt="SKLZ Accelerator Pro Indoor Putting" /></a>
