--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -86,9 +86,9 @@
              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
           </div>
 
-          <div class="fathers_day">
+          <!-- <div class="fathers_day">
             <a target="_blank" href="https://amzn.to/31jXEkr"><img src="<%= asset_path 'fathers-day.jpg' %>"></a>
-          </div>
+          </div> -->
           
           <%= render 'deals/body_promocode' %>
         </div>
