--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -300,5 +300,11 @@
   /*.promotions .rt_cnt .box_wrap .box img{width:100%;-webkit-filter: grayscale(100%);filter:none;}*/
 }
 
+@media screen and (max-width:640px){
+  .fathers_day img{width:100%;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+  .fathers_day img{width:100%;} 
+}
 
 
