--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,145 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="35" data-price="19.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K7jEtv"><img src="https://images-na.ssl-images-amazon.com/images/I/81OLKRTFaTL._SX522_.jpg" alt="Beard Kit" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K7jEtv">UPGRADED Beard Kit for Men Dad Beard Growth Grooming & Trimming - Unscented Leave-in Conditioner Oil, Shampoo Wash, Mustache Balm Wax, Brush,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.49</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K7jEtv">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="187.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2F2l8RB"><img src="https://images-na.ssl-images-amazon.com/images/I/81eAthiFCZL._SX522_.jpg" alt="Master & Dynamic Award Winning MH40 Over-Ear" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2F2l8RB">Master & Dynamic Award Winning MH40 Over-Ear, Closed Back Headphones with Superior Sound Quality and Highest Level of Design</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$187.99</span><span class="ori_price">$249.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2F2l8RB">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="24" data-price="73.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XHXTUo"><img src="https://images-na.ssl-images-amazon.com/images/I/71iD5RyhuaL._SY879_.jpg" alt="Ninja Professional 72oz Countertop Blender" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>24% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XHXTUo">Ninja Professional 72oz Countertop Blender with 1000-Watt Base and Total Crushing Technology for Smoothies, Ice and Frozen Fruit (BL610), Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$73.99</span><span class="ori_price">$97.93</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XHXTUo">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="19" data-price="29.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ka3cIM"><img src="https://images-na.ssl-images-amazon.com/images/I/81qGVklvDHL._SX522_.jpg" alt="Beer Caddy" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>19% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ka3cIM">LEGACY - a Picnic Time Brand 6-Bottle Beer Caddy with Integrated Bottle Opener, Khaki Green/Brown </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.95</span><span class="ori_price">$36.95</span>
+        <div class="tooltip_orange">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount width coupon</p>
+          </div>
+        </div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ka3cIM">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="297.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I5qm0I"><img src="https://images-na.ssl-images-amazon.com/images/I/917LEZ%2Bit3L._SX522_.jpg" alt="PANASONIC LUMIX FZ80 4K Digital Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I5qm0I">PANASONIC LUMIX FZ80 4K Digital Camera, 18.1 Megapixel Video Camera, 60X Zoom DC VARIO 20-1200mm Lens, F2.8-5.9 Aperture, POWER O.I.S. Stabilization,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$297.99</span><span class="ori_price">$399.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I5qm0I">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="124.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I60KAU"><img src="https://images-na.ssl-images-amazon.com/images/I/81fTZ%2Bf%2Bu8L._SX522_.jpg" alt="Petcube Bites Pet Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I60KAU">Petcube Bites Pet Camera with Treat Dispenser: HD 1080p Video Monitor, 2-Way Audio, Night Vision, Sound and Motion Alerts</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$124.50</span><span class="ori_price">$249.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I60KAU">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="67" data-price="152.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MCUxks"><img src="https://images-na.ssl-images-amazon.com/images/I/71fgQPnAJZL._SX679_.jpg" alt="Travelpro Luggage" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>67% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MCUxks">Travelpro Luggage Crew 11 21" Carry-on Expandable Spinner w/Suiter and USB Port, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$152.97</span><span class="ori_price">$460.00</span>
+        <div class="tooltip_orange">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount width coupon</p>
+          </div>
+        </div>
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MCUxks">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="56" data-price="discounted_price">
   <div class="image_box">
