--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -1,4 +1,5 @@
 .category_wrap{margin-top:270px;font-family: 'Montserrat', sans-serif;font-weight:bold;}
+.category_wrap h2{margin-left:1%;font-size:40px;border-bottom:3px solid #000;}
 .category_wrap .cateogry_box{float:left;width:31.33%;margin:1%;position:relative;}
 .category_wrap .cateogry_box a{text-decoration:none;color:white;box-shadow: -1px 6px 8px rgba(0, 0, 0, 0.1);border-radius:30px;display:block;height:250px;}
 .category_wrap .cateogry_box a:before{content: "";position: absolute;top: 0;left: 0;right: 0;bottom: 0;background:linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25));border-radius:30px;}
