--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -28,7 +28,7 @@
 
       </div>
 
-      <!-- <div class="show_box_down clearfix">
+      <div class="show_box_down clearfix">
         <% @relative_sub_category.shuffle.take(4).each do |subcategory| %>
           <% if subcategory.subcategory_id == @gadget.subcategory_id %>
             <div class="sbd_box">
@@ -42,7 +42,6 @@
           <% end %>
         <% end %>
       </div> 
-       -->
     </div>
   </div>
 </div>
